style.css
:root {
    --parameter-box-size: 40px;
    --default-border: 1px solid black;
    --bold-weight: 700;
    --min-width: 800px;
    --min-height: 700px;

    --default-height: 100vh;
    --default-width: 100vw;

    --int32-max: 2147483647;
}

body {
    margin: 0px;
    padding: 0px;
}

* {
    -webkit-user-select: none; /* Safari */
    -ms-user-select: none; /* IE 10 and IE 11 */
    user-select: none; /* Standard syntax */

    font-size: 16pt;
}


.icon {
    position: absolute;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;

    background-color: white;

    border: var(--default-border);
}

.icon-button-container {
    margin-right: 2px;
    display: flex;
    flex-wrap: nowrap;
}

.icon-remove-button,
.icon-get-result-button,
.icon-eval-button,
.icon-move-button {
    border: var(--default-border);
}

.icon-decorator {
    margin: 5px;
    font-weight: var(--bold-weight);
}

.icon-parameter {
    display: flex;
    min-width: var(--parameter-box-size);
    height: var(--parameter-box-size);
    margin: 2px;

    border: var(--default-border);
}

.icon-parameter-delete {
    position: absolute;
    font-size: 8px;
}

.icon-parameter-text {
    align-self: center;
}

.icon-io-field {
    display: flex;
    align-content: center;
}

.icon-result {
    display: flex;
    align-content: center;
    margin: 5px;
}


.tab {
    padding: 5px;
    border: var(--default-border);
}

#tabs {
    grid-area: tabs;
    border: var(--default-border);

    display: flex;
    flex-direction: row;
    align-items: center;

    padding: 5px;

    overflow-x: scroll;
}


.tab-parameter {
    width: var(--parameter-box-size);
    height: var(--parameter-box-size);
    text-align: center;
    border: var(--default-border);
}

#tab-parameters {
    grid-area: tab-parameters;
    border: var(--default-border);

    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;

    overflow-x: scroll;
}


#constant-spawner {
    grid-area: constant-spawner;
    border: var(--default-border);

    display: flex;
    flex-direction: column;
    justify-content: center;

    padding: 5px;
}

.icon-spawner-button {
    width: 75%;
}


#custom-icon-creator {
    grid-area: custom-icon-creator;
    border: var(--default-border);

    display: flex;
    flex-direction: column;
    justify-content: center;

    padding: 5px;
}


#held-object-container {
    grid-area: held-object;
    border: var(--default-border);
    align-items: center;
}

#held-object-text  {
    text-align: center;
}


#default-icon-spawners {
    grid-area: default-icon-spawners;
    border: var(--default-border);
    overflow-y: scroll;
    overflow-x: hidden;

    padding: 5px;
}

#custom-icon-spawners {
    grid-area: custom-icon-spawners;
    border: var(--default-border);
    overflow-y: scroll;
    overflow-x: hidden;

    padding: 5px;
}


#icon-canvas {
    grid-area: canvas;
    border: var(--default-border);

    position: relative;

    overflow: scroll;
}


#result-field {
    grid-area: result-field;
    border: var(--default-border);

    display: flex;
    align-items: center;
    justify-content: center;
}

#result-field-box {
    width: var(--parameter-box-size);
    height: var(--parameter-box-size);
    border: var(--default-border);
}


#root-container {
    display: grid;
    grid-template-areas:
        "default-icon-spawners result-field tab-parameters custom-icon-spawners"
        "default-icon-spawners canvas canvas custom-icon-spawners"
        "constant-spawner canvas canvas custom-icon-creator"
        "constant-spawner held-object tabs custom-icon-creator";
    grid-template-columns: 15% 20% auto 15%;
    grid-template-rows: 8% auto 8% 8%;

    min-width:var(--min-width);
    min-height:var(--min-height);

    width: var(--default-width);
    height: var(--default-height);

    margin: 0px;
    padding: 0px;

    overflow: scroll;
}


/* Modal css from this example https://www.w3schools.com/howto/howto_css_modals.asp */
#initial-popup {
    position: fixed;
    left: 0;
    top: 0;

    margin: 0px;

    width: var(--default-width);
    height: var(--default-height);

    z-index: var(--int32-max);

    /* Set backgroud to slightly dimmed */
    background-color: rgba(0,0,0,0.3);

    overflow-y: scroll;
}

#initial-popup-content {
    background-color: #fefefe;
    margin: 15% auto;
    padding: 20px;
    border: var(--default-border);
    width: 80%;
}

